moved author link creation from name service to name, fixed wierd line and some footer spacing issues

--- a/web/src/main/resources/app/search/css/main.scss
+++ b/web/src/main/resources/app/search/css/main.scss
@@ -94,11 +94,12 @@ dd {
   width: 100%;
   overflow:hidden;
   a {
-    padding-right: 15px;
+    padding-left: 15px;
   }
 }
 
-.static {
+.panel {
+  margin-bottom: 0px;
 }
 
 .title {
